# prpy

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
propy/: constants.py  ffmpeg.py  image.py  signal.py  stride_tricks.py
propy/ffmpeg/: probe.py  readwrite.py  utils.py
propy/numpy/: face.py  image.py  metric.py  signal.py  stride_tricks.py
propy/tensorflow/: image.py  loss.py  lr_schedule.py  model_saver.py  nan.py  optimizer.py  signal.py
propy/torch/: model_saver.py
prpy/: helpers.py
prpy/ffmpeg/: probe.py  readwrite.py  utils.py
prpy/numpy/: __init__.py  core.py  detect.py  face.py  filters.py  freq.py  image.py  image_ops.c  import math.py  interp.py  metric.py  physio.py  rolling.py  signal.py  stride_tricks.py  utils.py
prpy/tensorflow/: image.py  loss.py  model_saver.py  nan.py  signal.py
prpy/torch/: model_saver.py
tests/: conftest.py  test_ffmpeg.py  test_image.py  test_numpy_core.py  test_numpy_detect.py  test_numpy_face.py  test_numpy_filters.py  test_numpy_freq.py  test_numpy_image.py  test_numpy_interp.py  test_numpy_metric.py  test_numpy_physio.py  test_numpy_rolling.py  test_numpy_signal.py  test_numpy_stride_tricks.py  test_numpy_utils.py  test_signal.py  test_stride_tricks.py  test_tensorflow.py  test_torch.py
