[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "propy"
authors = [
    {name = "Philipp Rouast", email = "philipp@rouast.com"},
]
description = "Collection of Python utils for signal, image, and video processing"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "numpy", "ffmpeg", "tensorflow", "torch"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
ffmpeg = ["ffmpeg-python", "numpy"]
numpy = ["numpy", "scipy", "Pillow", "opencv-python", "scikit-learn"]
numpy_min = ["numpy", "scipy", "Pillow"]
tensorflow = ["tensorflow==2.12.1", "numpy"]
torch = ["torch==2.1.0"]
test = ["pytest", "flake8"]

[project.urls]
Repository = "https://github.com/prouast/propy.git"
Issues = "https://github.com/prouast/propy/issues"

[tool.setuptools_scm]
