[build-system]
requires = ["setuptools>=61", "setuptools-scm", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "prpy"
authors = [
    {name = "Philipp Rouast", email = "philipp@rouast.com"},
]
description = "Collection of Python utils for signal, image, and video processing"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "numpy", "ffmpeg", "tensorflow", "torch"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
ffmpeg = ["ffmpeg-python", "numpy"]
numpy = ["numpy", "scipy", "Pillow", "opencv-python", "psutil", "scikit-learn"]
numpy_min = ["numpy", "scipy", "Pillow", "psutil"]
tensorflow = ["tensorflow<2.13", "numpy"]
torch = ["torch>=2.1.0"]
test = ["pytest", "flake8", "psutil"]

[project.urls]
Repository = "https://github.com/prouast/prpy.git"
Issues = "https://github.com/prouast/prpy/issues"

[tool.setuptools]
packages = ["prpy"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
markers = [
    "skip_parametrize_tf_cv2: skip tests that parametrize 'tf' or 'cv2'",
]
