[metadata]
name = propy
version = 0.1.1
author = Philipp Rouast
author_email = philipp@rouast.com
description = Collection of python utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prouast/propy
license = Proprietary
project_urls =
  Bug Tracker = https://github.com/prouast/propy/issues
classifiers =
  Programming Language :: Python :: 3
  License :: Other/Proprietary License
  Operating System :: OS Independent

[options]
include_package_data = True
packages = propy
python_requires = >=3.7
install_requires =
  ffmpeg-python
  numpy
  Pillow
  scipy
  tensorflow
  torch
