[metadata]
name = propy
version = 0.1.13
author = Philipp Rouast
author_email = philipp@rouast.com
description = Collection of python utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prouast/propy
license = Proprietary
project_urls =
  Bug Tracker = https://github.com/prouast/propy/issues
classifiers =
  Programming Language :: Python :: 3
  License :: Other/Proprietary License
  Operating System :: OS Independent

[options]
include_package_data = True
packages = propy
python_requires = >=3.7
install_requires =
  build
  numpy
  opencv-python
  Pillow
  scipy

[options.extras_require]
tensorflow = tensorflow
ffmpeg = ffmpeg-python
torch = torch
test = pytest; flake8
