[metadata]
name = propy
version = 0.2
author = Philipp Rouast
author_email = philipp@rouast.com
description = Collection of Python utils for signal, image, and video processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prouast/propy
license = Proprietary
project_urls =
  Bug Tracker = https://github.com/prouast/propy/issues
classifiers =
  Programming Language :: Python :: 3
  License :: MIT
  Operating System :: OS Independent

[options]
include_package_data = True
packages = propy
python_requires = >=3.8
install_requires =
  build
  ffmpeg-python
  numpy
  Pillow
  scipy

[options.extras_require]
opencv = opencv-python
sklearn = scikit-learn
tensorflow = tensorflow==2.12.1
test = pytest; flake8
torch = torch==2.1.0
